--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
         <version>2.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>com.example.markiiimark</groupId>
+    <artifactId>jpaDemo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
